@@ -1,6 +1,6 @@
 .TH svwaitdown 8
 .SH NAME
-svwaitdown \- waits for services controlled by runsv(8) or supervise(8) to be down
+svwaitdown \- waits for services controlled by runsv(8) to be down
 .SH SYNOPSIS
 .B svwaitdown
 [
@@ -14,9 +14,7 @@ svwaitdown \- waits for services controlled by runsv(8) or supervise(8) to be do
 .I services
 .SH DESCRIPTION
 .I services
-consists of one or more arguments. Each
-.I service
-directory must start with a slash.
+consists of one or more arguments, each argument naming a service directory.
 .P
 .B svwaitdown
 sends each
@@ -26,9 +24,7 @@ down.
 The
 .I services
 given at the command line must be controlled by
-.BR runsv (8),
-or
-.BR supervise (8).
+.BR runsv (8).
 .P
 .B svwaitdown
 blocks, limited by a
@@ -39,7 +35,8 @@ are down or reports errors.
 .SH OPTIONS
 .TP
 .B \-v
-verbose. Print verbose messages to stderr.
+verbose.
+Print verbose messages to stderr.
 .TP
 .B \-t \fIsec
 Set the timeout for waiting for
@@ -48,10 +45,11 @@ to become down to
 .I sec
 seconds.
 .I sec
-must be between 2 and 6000. Default is 600 (10 minutes).
+must be between 1 and 6000. Default is 600 (10 minutes).
 .TP
 .B \-k
-Kill. If the timeout is reached before all
+Kill.
+If the timeout is reached before all
 .I services
 are down, tell the
 .BR runsv (8)
@@ -60,7 +58,8 @@ processes to send the
 a KILL signal.
 .TP
 .B \-x
-Exit. Send each
+Exit.
+Send each
 .I service
 the ``exit'' command additionally to the ``down'' command, and wait for the
 corresponding
@@ -77,10 +76,8 @@ are down.
 If a
 .I service
 is usually controlled by
-.B runsv (8)
-or
-.BR supervise (8),
-but no supervisor process is currently running,
+.B runsv (8),
+but no supervisor process is currently running in the directory,
 .B svwaitdown
 treats this
 .I service
@@ -94,7 +91,7 @@ increases the exit code by one and exits non zero.
 The maximum is 100.
 .P
 .B svwaitdown
-returns 111 if the timeout
+returns 111 on error, or if the timeout
 .I sec
 was reached.
 .SH SEE ALSO
@@ -110,7 +107,6 @@ runsvdir(8),
 runsvchdir(8),
 utmpset(8)
 .P
- http://smarden.org/runit/
- http://cr.yp.to/daemontools.html
+http://smarden.org/runit/
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
